methods.args.MethodsArgs.scala.code
def move(nbPas:Int, versLavant: Boolean): Int = {
  if (versLavant==true) {
    avance()
  } else {
    recule()
  }
}